Replace and drop unirest